--- a/BatbinBackend.cabal
+++ b/BatbinBackend.cabal
@@ -7,14 +7,16 @@ license-file:        LICENSE
 author:              Udit Karode
 maintainer:          udit.karode@gmail.com
 build-type:          Simple
+extra-source-files:  CHANGELOG.md
 
 executable BatbinBackend
   main-is:             Main.hs
-  build-depends:       base >=4.10 && <4.20
+  build-depends:       base >=4.13 && <4.14
                      , Spock
                      , text
                      , aeson
                      , uuid
                      , directory
                      , ansi-terminal
+                     , MissingH
   default-language:    Haskell2010
