--- a/BatbinBackend.cabal
+++ b/BatbinBackend.cabal
@@ -11,6 +11,8 @@ extra-source-files:  CHANGELOG.md
 
 executable BatbinBackend
   main-is:             Main.hs
+  other-modules:       Utils Routes
+  hs-source-dirs:      src
   build-depends:       base >=4.13 && <4.14
                      , Spock
                      , text
