--- a/BatbinBackend.cabal
+++ b/BatbinBackend.cabal
@@ -21,4 +21,7 @@ executable BatbinBackend
                      , directory
                      , ansi-terminal
                      , MissingH
+                     , wai
+                     , iproute
+                     , network
   default-language:    Haskell2010
