--- a/BatbinBackend.cabal
+++ b/BatbinBackend.cabal
@@ -7,11 +7,11 @@ license-file:        LICENSE
 author:              Udit Karode
 maintainer:          udit.karode@gmail.com
 build-type:          Simple
-extra-source-files:  CHANGELOG.md
 
 executable BatbinBackend
   main-is:             Main.hs
-  other-modules:       Utils Routes
+  other-modules:       Utils
+                     , Routes
   hs-source-dirs:      src
   build-depends:       base >=4.13 && <4.14
                      , Spock
@@ -24,4 +24,8 @@ executable BatbinBackend
                      , wai
                      , iproute
                      , network
+                     , hedis
+                     , utf8-string
+                     , mtl
+                     , bytestring
   default-language:    Haskell2010
